Add Tag and Category Controllers

--- a/Web/Web/Views/Admin/Index.cshtml
+++ b/Web/Web/Views/Admin/Index.cshtml
@@ -24,6 +24,18 @@
     </a>
 </div>
 
+<div class="mt-3">
+    <a asp-controller="Tag" asp-action="Index" class="btn btn-primary">
+        Manage Tags
+    </a>
+</div>
+
+<div class="mt-3">
+    <a asp-controller="Category" asp-action="Index" class="btn btn-primary">
+        Manage Categories
+    </a>
+</div>
+
 <h4 class="mt-5">Manage Users</h4>
 
 <table class="table table-striped">
