Update Author and Publisher Controllers

--- a/Web/Web/Views/Admin/Index.cshtml
+++ b/Web/Web/Views/Admin/Index.cshtml
@@ -36,6 +36,18 @@
     </a>
 </div>
 
+<div class="mt-3">
+    <a asp-controller="Publisher" asp-action="Index" class="btn btn-primary">
+        Manage Publishers
+    </a>
+</div>
+
+<div class="mt-3">
+    <a asp-controller="Author" asp-action="Index" class="btn btn-primary">
+        Manage Authors
+    </a>
+</div>
+
 <h4 class="mt-5">Manage Users</h4>
 
 <table class="table table-striped">
