--- a/Web/Web/Views/Category/Index.cshtml
+++ b/Web/Web/Views/Category/Index.cshtml
@@ -19,7 +19,7 @@
 
 <div class="mt-3">
     <a asp-controller="Category" asp-action="AddCategory" class="btn btn-primary">
-        Add New AddCategory
+        Add New Category
     </a>
 </div>
 
