--- a/Web/Web/Views/Author/Index.cshtml
+++ b/Web/Web/Views/Author/Index.cshtml
@@ -2,13 +2,17 @@
 
 <h1>Authors</h1>
 
-<a asp-action="AddAuthor" class="btn btn-primary">Add New Author</a>
+<div class="mt-3">
+    <a asp-controller="Author" asp-action="AddAuthor" class="btn btn-primary">
+        Add New Author
+    </a>
+</div>
 
-<table class="table table-bordered mt-3">
+<table class="table">
     <thead>
         <tr>
-            <th>ID</th>
             <th>Name</th>
+            <th>Bio</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -16,15 +20,16 @@
         @foreach (var author in Model.Items)
         {
             <tr>
-                <td>@author.Id</td>
                 <td>@author.Name</td>
+                <td>@author.Bio</td>
                 <td>
-                    <a asp-action="EditAuthor" asp-route-id="@author.Id" class="btn btn-warning">
-                        Edit
-                    </a>
-                    <form asp-action="DeleteAuthor" asp-route-id="@author.Id"
-                          method="post" class="d-inline">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                    <form asp-action="DeleteAuthor" asp-controller="Author" method="post" class="d-inline">
+                        <input type="hidden" name="id" value="@author.Id" />
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                    <form asp-action="EditAuthor" asp-controller="Author" method="get" class="d-inline">
+                        <input type="hidden" name="id" value="@author.Id" />
+                        <button type="submit" class="btn btn-danger btn-sm">Edit</button>
                     </form>
                 </td>
             </tr>
