--- a/Web/Web/Views/Category/EditCategory.cshtml
+++ b/Web/Web/Views/Category/EditCategory.cshtml
@@ -20,7 +20,7 @@
     <div class="form-group">
         <input type="hidden" name="id" value="@Model.Id" />
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" class="form-control" required />
+        <input type="text" id="name" name="name" value="@Model.Name" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Edit</button>
 </form>
