--- a/Web/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Web/Views/Shared/_Layout.cshtml
@@ -46,8 +46,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Auth" asp-action="ChangeProfile">Change Profile</a>
                                 </li>
-
-
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Book" asp-action="Index">Manage Books</a> <!-- New -->
+                                </li>
                             }
                             @if (userRole == 2)
                             {
