--- a/Web/Web/Views/Admin/Index.cshtml
+++ b/Web/Web/Views/Admin/Index.cshtml
@@ -48,6 +48,12 @@
     </a>
 </div>
 
+<div class="mt-3">
+    <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
+        Manage Books
+    </a>
+</div>
+
 <h4 class="mt-5">Manage Users</h4>
 
 <table class="table table-striped">
@@ -65,13 +71,11 @@
         }
         @foreach (var user in Model.Items)
         {
-            //List<string?> roles = RolesRepo.GetAll().Select(u => u.Name).ToList();
-
             <tr>
                 <td>@user.Email</td>
-                <td>@user.Role.Name</td>
+                <td>@user.Role?.Name</td>
                 <td>
-                    @if (!user.Role.Name.Equals("Admin")) // Hide Delete Button for Admins
+                    @if (!user.Role?.Name?.Equals("Admin") ?? true) // Hide Delete Button for Admins
                     {
                         <form asp-action="DeleteUser" asp-controller="Admin" method="post" class="d-inline">
                             <input type="hidden" name="id" value="@user.Id" />
