updated HomeController and Home Index

--- a/Web/Web/Views/Home/Index.cshtml
+++ b/Web/Web/Views/Home/Index.cshtml
@@ -4,5 +4,28 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="row">
+        @foreach (var book in Model)
+        {
+            <div class="col-md-3 mb-4">
+                <div class="card h-100">
+                    @if (!string.IsNullOrEmpty(book.CoverImagePath))
+                    {
+                        <img src="~/images/@book.CoverImagePath" class="card-img-top" alt="Book Cover" />
+                    }
+                    else
+                    {
+                        <img src="~/images/default.png" class="card-img-top" alt="Default Cover" />
+                    }
+                    <div class="card-body text-center">
+                        <h5 class="card-title">@book.Title</h5>
+                        <p class="card-text">
+                            <strong>Authors:</strong>
+                            @string.Join(", ", book.Authors)
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
