Displaying books full info in page.
- Updated HomeController to fetch categories through BookCategory entity
- Modified Index and Details actions to include categories and tags
- Updated Index and Details views to display categories and tags
- Ensured proper handling of dynamic data in views

--- a/Web/Web/Views/Home/Index.cshtml
+++ b/Web/Web/Views/Home/Index.cshtml
@@ -9,21 +9,23 @@
         {
             <div class="col-md-3 mb-4">
                 <div class="card h-100">
-                    @if (!string.IsNullOrEmpty(book.CoverImagePath))
-                    {
-                        <img src="~/images/@book.CoverImagePath" class="card-img-top" alt="Book Cover" />
-                    }
-                    else
-                    {
-                        <img src="~/images/default.png" class="card-img-top" alt="Default Cover" />
-                    }
-                    <div class="card-body text-center">
-                        <h5 class="card-title">@book.Title</h5>
-                        <p class="card-text">
-                            <strong>Authors:</strong>
-                            @string.Join(", ", book.Authors)
-                        </p>
-                    </div>
+                    <a href="@Url.Action("Details", "Home", new { id = book.Id })">
+                        @if (!string.IsNullOrEmpty(book.CoverImagePath))
+                        {
+                            <img src="~/images/@book.CoverImagePath" class="card-img-top" alt="Book Cover" />
+                        }
+                        else
+                        {
+                            <img src="~/images/default.png" class="card-img-top" alt="Default Cover" />
+                        }
+                        <div class="card-body text-center">
+                            <h5 class="card-title">@book.Title</h5>
+                            <p class="card-text">
+                                <strong>Authors:</strong>
+                                @string.Join(", ", book.Authors)
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         }
