Add Loans and fix some bugs

--- a/Web/Web/Views/Author/AddAuthor.cshtml
+++ b/Web/Web/Views/Author/AddAuthor.cshtml
@@ -20,4 +20,9 @@
         <input type="text" id="bio" name="bio" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Add</button>
+    <div class="mt-3">
+        <a asp-controller="Author" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
