--- a/Web/Web/Views/Author/EditAuthor.cshtml
+++ b/Web/Web/Views/Author/EditAuthor.cshtml
@@ -21,4 +21,9 @@
         <input type="text" id="bio" name="bio" value="@Model.Bio" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Edit</button>
+    <div class="mt-3">
+        <a asp-controller="Author" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
