--- a/Web/Web/Views/Book/AddBook.cshtml
+++ b/Web/Web/Views/Book/AddBook.cshtml
@@ -61,4 +61,9 @@
         <input type="file" id="coverImage" name="CoverImage" class="form-control" />
 
     <button type="submit" class="btn btn-primary">Add</button>
+    <div class="mt-3">
+        <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
