--- a/Web/Web/Views/Category/AddCategory.cshtml
+++ b/Web/Web/Views/Category/AddCategory.cshtml
@@ -23,4 +23,9 @@
         <input type="text" id="name" name="name" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Add</button>
+    <div class="mt-3">
+        <a asp-controller="Category" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
