--- a/Web/Web/Views/Admin/Index.cshtml
+++ b/Web/Web/Views/Admin/Index.cshtml
@@ -54,6 +54,12 @@
     </a>
 </div>
 
+<div class="mt-3">
+    <a asp-controller="Loan" asp-action="Index" class="btn btn-primary">
+        Manage Loans
+    </a>
+</div>
+
 <h4 class="mt-5">Manage Users</h4>
 
 <table class="table table-striped">
