--- a/Web/Web/Views/Admin/RegisterUser.cshtml
+++ b/Web/Web/Views/Admin/RegisterUser.cshtml
@@ -39,4 +39,10 @@
         </select>
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
+
+    <div class="mt-3">
+        <a asp-controller="Admin" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
