--- a/Web/Web/Views/Book/EditBook.cshtml
+++ b/Web/Web/Views/Book/EditBook.cshtml
@@ -81,4 +81,9 @@
         <input type="file" id="coverImage" name="CoverImage" class="form-control" />
 
     <button type="submit" class="btn btn-primary">Save Changes</button>
+    <div class="mt-3">
+        <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
