--- a/Web/Web/Views/Category/EditCategory.cshtml
+++ b/Web/Web/Views/Category/EditCategory.cshtml
@@ -23,5 +23,10 @@
         <input type="text" id="name" name="name" value="@Model.Name" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Edit</button>
+    <div class="mt-3">
+        <a asp-controller="Category" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
 
