--- a/Web/Web/Views/Publisher/AddPublisher.cshtml
+++ b/Web/Web/Views/Publisher/AddPublisher.cshtml
@@ -20,4 +20,9 @@
         <input type="text" id="address" name="address" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Add</button>
+    <div class="mt-3">
+        <a asp-controller="Publisher" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
