--- a/Web/Web/Views/Publisher/EditPublisher.cshtml
+++ b/Web/Web/Views/Publisher/EditPublisher.cshtml
@@ -21,4 +21,9 @@
         <input type="text" id="address" name="address" value="@Model.Address" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Edit</button>
+    <div class="mt-3">
+        <a asp-controller="Publisher" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
