--- a/Web/Web/Views/Publisher/Index.cshtml
+++ b/Web/Web/Views/Publisher/Index.cshtml
@@ -36,3 +36,8 @@
         }
     </tbody>
 </table>
+<div class="mt-3">
+    <a asp-controller="Admin" asp-action="Index" class="btn btn-primary">
+        Back
+    </a>
+</div>
