--- a/Web/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Web/Views/Shared/_Layout.cshtml
@@ -41,24 +41,18 @@
                                 <span class="nav-link text-dark">Welcome, @loggedUserName</span>
                             </li>
 
-                            @if (userRole == 1)
+                            @if (userRole == 1 || userRole == 2)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Admin Dashboard</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Auth" asp-action="ChangeProfile">Change Profile</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Book" asp-action="Index">Manage Books</a>
+                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Dashboard</a>
                                 </li>
                             }
-                            @if (userRole == 2)
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Moderator" asp-action="Index">Moderator Dashboard</a>
-                                </li>
-                            }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="ChangeProfile">Change Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Loan" asp-action="CurrentUserLoans">My Loans</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Auth" asp-action="Logout">Logout</a>
                             </li>
