--- a/Web/Web/Views/Tag/AddTag.cshtml
+++ b/Web/Web/Views/Tag/AddTag.cshtml
@@ -32,4 +32,9 @@
         </select>
     </div>
     <button type="submit" class="btn btn-primary">Add</button>
+    <div class="mt-3">
+        <a asp-controller="Tag" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
