--- a/Web/Web/Views/Tag/EditTag.cshtml
+++ b/Web/Web/Views/Tag/EditTag.cshtml
@@ -40,4 +40,9 @@
     </div>
     <input type="hidden" name="Id" value="@Model.Id" />
     <button type="submit" class="btn btn-primary">Edit</button>
+    <div class="mt-3">
+        <a asp-controller="Tag" asp-action="Index" class="btn btn-primary">
+            Back
+        </a>
+    </div>
 </form>
