Add Authentication and Restrictions

--- a/Web/Web/Views/Auth/Login.cshtml
+++ b/Web/Web/Views/Auth/Login.cshtml
@@ -8,14 +8,14 @@
 }
 
 <form action="/Auth/Login" method="post">
-    <input type="hidden" name="url" value="@ViewData["url"]" />
+    <input type="hidden" name="Url" value="@ViewData["url"]" />
     <div class="form-group">
         <label for="Email">Email</label>
-        <input type="email" id="email" name="email" class="form-control" required />
+        <input type="email" id="Email" name="Email" class="form-control" required />
     </div>
     <div class="form-group">
         <label for="Password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" required />
+        <input type="password" id="Password" name="Password" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
