--- a/Web/Web/Views/Publisher/Index.cshtml
+++ b/Web/Web/Views/Publisher/Index.cshtml
@@ -8,6 +8,11 @@
     </a>
 </div>
 
+@if (TempData["Success"] != null)
+{
+    <p class="text-success">@TempData["Success"]</p>
+}
+
 <table class="table">
     <thead>
         <tr>
