--- a/Web/Web/Views/Author/Index.cshtml
+++ b/Web/Web/Views/Author/Index.cshtml
@@ -2,6 +2,16 @@
 
 <h1>Authors</h1>
 
+@if (TempData["Success"] != null)
+{
+    <p class="text-success">@TempData["Success"]</p>
+}
+
+@if (TempData["Error"] != null)
+{
+    <p class="text-danger">@TempData["Error"]</p>
+}
+
 <div class="mt-3">
     <a asp-controller="Author" asp-action="AddAuthor" class="btn btn-primary">
         Add New Author
